Tue Sep  1 17:24:05 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_opendir, link, rb_w32_stati64, rb_w32_utime,
	  rb_w32_unlink): use WCHAR path internally.

	* win32/win32.c, include/ruby/win32.h (rb_w32_wchown, rb_w32_wlink,
	  rb_w32_wstati64, rb_w32_wutime, rb_w32_wunlink): new functions those
	  accept WCHAR path.

	* file.c (rb_stat, eaccess, access_internal, rb_file_s_ftype,
	  chmod_internal, rb_file_chmod, rb_file_chown, utime_internal,
	  rb_file_s_link, unlink_internal, rb_file_s_rename): use WCHAR version
	  runtime functions on Win32.

	* file.c (rb_str_conv_for_path): guarantee that the return path always
	  ended with NUL charcter.

	* file.c (apply2files, rb_stat, rb_file_s_lstat, rb_file_symlink_p,
	  rb_file_readable_p, rb_file_writable_p, rb_file_executable_p,
	  check3rdbyte, rb_file_identical_p, rb_file_chmod, rb_file_chown,
	  rb_file_s_link, rb_file_s_symlink, rb_file_s_rename): call
	  rb_str_conv_for_path() before passing the path to system, and
	  simple use RSTRING_PTR() instead of StringValueCStr().

Wed Aug 26 13:19:41 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* file.c (rb_str_conv_for_path): should check necessity of converting
	  encoding on Max OS X.

Fri Aug 21 17:12:39 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* file.c, include/ruby/intern.h (rb_str_conv_for_path): new function
	  to convert encoding for pathname.

	* io.c (rb_sysopen): use above function.

	* dir.c (dir_chdir, dir_s_chroot, dir_s_mkdir, dir_s_rmdir): ditto.

	* win32/win32.c, include/ruby/win32.h (rb_w32_wmkdir): new function
	  to make directory with WCHAR pathname.

Fri Aug 21 15:13:08 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* include/ruby/io.h, io.c (FMODE_SETENC_BY_BOM):
	  renamed from FMODE_STRIP_BOM.

Thu Aug 20 01:24:55 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* io.c (rb_io_fmode_modestr): change modestr syntax for BOM
	  to "BOM|UTF-*". [ruby-dev:39106]

	* io.c (parse_mode_enc): ditto.
