@@ -1,3 +1,12 @@
+Wed Sep  2 11:30:49 2009  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* file.c (rb_stat, rb_file_lstat, eaccess, rb_file_s_ftype,
+	  rb_file_size, rb_file_chmod, chown_internal, rb_file_chown,
+	  utime_internal, rb_file_s_link, unlink_internal, rb_file_s_rename,
+	  rb_stat_init): use wrapper macros instead of using platform ifdefs.
+
+	* file.c (rb_file_s_truncate): call rb_str_conv_for_path().
+
 Tue Sep  1 17:24:05 2009  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* win32/win32.c (rb_w32_opendir, link, rb_w32_stati64, rb_w32_utime,
